Created CMake based configuration. It is working on macOS 15.5.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Debug tests",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/tests",
+            "program": "${workspaceFolder}/build/pensar_tests",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
