Fixed Dummy class in array_test to be memcmp compatible.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,9 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             },
-            "problemMatcher": ["$gcc"]
+            "problemMatcher": [
+                "$gcc"
+            ]
         },
         {
             "label": "build-tests",
@@ -17,12 +19,16 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             },
-            "problemMatcher": ["$gcc"],
+            "problemMatcher": [
+                "$gcc"
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "dependsOn": ["cmake-configure"]
+            "dependsOn": [
+                "cmake-configure"
+            ]
         }
     ]
 }
